--- a/scss/_drupal-bootstrap.scss
+++ b/scss/_drupal-bootstrap.scss
@@ -92,30 +92,26 @@ figure {
     display: block;
     &.align-left {
         float: left;
-        display: contents;
         width: min-content;
         shape-outside: polygon(0 0, 84% 0, 97% 80%, 97% 100%, 0% 100%) border-box;
         shape-margin: 1em;
         figcaption {
             float: left;
             clear: left;
-            margin: 0.5em 1em;
             text-align: center;
-            width: calc(var(--imageWidth) * 1px);
+            width: 100%;
         }
     }
     &.align-right {
         float: right;
-        display: contents;
         width: min-content;
         shape-outside: polygon(16% 0%, 100% 0%, 100% 100%, 0% 100%, -3% 88%) border-box;
         shape-margin: 1em;
         figcaption {
             float: right;
             clear: right;
-            margin: 0.5em 1em;
             text-align: center;
-            width: calc(var(--imageWidth) * 1px);
+            width: 100%;
         }
     }
     &.align-center {
@@ -124,6 +120,7 @@ figure {
         figcaption {
             display: table-caption;
             caption-side: bottom;
+            text-align: center;
         }
     }
     .rotate-left {
